修复mogdb数据库支持的缺陷